--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,20 @@ body.before-load {
 
 .scroll-message {
   bottom: 14px;
+  animation: scroll-message-bounce 0.7s cubic-bezier(0.46, 0.03, 0.52, 0.96)
+    infinite;
+}
+
+@keyframes scroll-message-bounce {
+  0% {
+    bottom: 30px;
+  }
+  50% {
+    bottom: 6px;
+  }
+  100% {
+    bottom: 30px;
+  }
 }
 
 .scroll-message-contain {
@@ -93,13 +107,30 @@ body.before-load {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: #888;
+}
+
+.title-message {
+  animation: 0.3s title-message-bounce infinite;
+}
+
+@keyframes title-message-bounce {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 #scroll-section-0 h1 {
   position: relative;
   top: -10vh;
   z-index: 5;
-  font-size: 4rem;
+  font-size: 10rem;
   text-align: center;
 }
 .main-message {
@@ -274,6 +305,17 @@ body.before-load {
 
 .normal-content {
   margin-bottom: 10rem;
+}
+
+.right-grass-img {
+  background-image: url(../image/grass.png);
+  width: 51rem;
+  height: 28rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  top: 0;
+  left: -51rem;
 }
 
 @media (min-width: 1024px) {
