:art: Improve structure
- 잔디 자체의 css 를 오른쪽 왼쪽 동일하게 하기 위해서 grass-img 로 통일

--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,7 @@ body.before-load {
   margin-bottom: 10rem;
 }
 
-.right-grass-img {
+.grass-img {
   background-image: url(../image/grass.png);
   width: 61rem;
   height: 40rem;
