:lipstick: Add or update the UI and style files.
-잔디 위치 조정 1

--- a/css/main.css
+++ b/css/main.css
@@ -314,8 +314,7 @@ body.before-load {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  top: 0;
-  left: -61rem;
+  position: relative;
 }
 
 .grass-container {
